update gitignore, add missing files
Should clean up uncommitted changes

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,15 @@ Icon
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+
+# Forge
+.gradle
+.settings
+bin
+build
+eclipse
+gradle
+
+.classpath
+gradlew
+gradlew.bat
