pegasus flight whitelist
Little chat messages should get localized eventually too

--- a/eclipse/ForgeEssentials/main.cfg
+++ b/eclipse/ForgeEssentials/main.cfg
@@ -32,21 +32,21 @@ Core {
     ##########################################################################################################
 
     Modules {
-        B:Afterlife=true
-        B:AuthLogin=true
-        B:Backups=true
-        B:Chat=true
+        B:Afterlife=false
+        B:AuthLogin=false
+        B:Backups=false
+        B:Chat=false
         B:Commands=true
-        B:Economy=true
-        B:Multiworld=true
-        B:PlayerLogger=true
-        B:Remote=true
-        B:Scripting=true
-        B:ServerVote=true
-        B:SignTools=true
-        B:Teleport=true
-        B:Tickets=true
-        B:WEIntegrationTools=true
+        B:Economy=false
+        B:Multiworld=false
+        B:PlayerLogger=false
+        B:Remote=false
+        B:Scripting=false
+        B:ServerVote=false
+        B:SignTools=false
+        B:Teleport=false
+        B:Tickets=false
+        B:WEIntegrationTools=false
         B:WorldBorder=false
         B:perftools=true
     }
