--- a/eclipse/ForgeEssentials/main.cfg
+++ b/eclipse/ForgeEssentials/main.cfg
@@ -10,16 +10,34 @@ Core {
     # For modules that support it, place their configs in this file.
     B:canonicalConfigs=false
 
+    # Add custom messages here that will appear when /help is run
+    S:custom_help <
+     >
+
     # Activates developer debug mode. Spams your FML logs.
     B:debug=false
 
+    # Date-only format
+    S:format_date=yyyy-MM-dd
+
+    # Date and time format
+    S:format_date_time=dd.MM HH:mm
+
+    # Date and time format with seconds
+    S:format_date_time_seconds=dd.MM HH:mm:ss
+
+    # Time-only format with seconds
+    S:format_time=HH:mm
+
+    # Hide WorldEdit commands from /help and only show them in //help command
+    B:hide_worldedit_help=true
+
+    # Log commands to console
+    B:logCommands=false
+
     # Specify the file where the modlist will be written to. This path is relative to the ForgeEssentials folder.
     S:modlistLocation=modlist.txt
-
-    # Switch to true if you want selections to persist between user sessions. Has no effect when WEIntegrationTools is installed.
     B:persistSelections=false
-
-    # Remove commands from the list if they already exist outside of FE.
     B:removeDuplicateCommands=true
 
     # Check for newer versions of ForgeEssentials on load?
@@ -52,8 +70,12 @@ Core {
     }
 
     Misc {
-        # If +50% of players sleep, make it day.
+        # Check if a player's name contains spaces (can gum up some things in FE)
+        B:CheckSpacesInNames=true
         B:MajoritySleep=true
+
+        # Once this percent of player sleeps, allow the night to pass
+        I:MajoritySleepThreshold=50
     }
 
     ##########################################################################################################
