--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ group= "horse.ponecraft" // http://maven.apache.org/guides/mini/guide-naming-con
 archivesBaseName = "horse.ponecraft"
 
 minecraft {
-    version = "1.7.10-10.13.4.1492-1.7.10"
+    version = "1.7.10-10.13.4.1614-1.7.10"
     runDir = "eclipse"
 }
 
@@ -67,13 +67,13 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
     
-    compile "codechicken:CodeChickenLib:1.7.10-1.1.1.106:dev"
-    compile "codechicken:CodeChickenCore:1.7.10-1.0.4.29:dev"
-    compile "codechicken:NotEnoughItems:1.7.10-1.0.3.72:dev"
+    compile "codechicken:CodeChickenLib:1.7.10-1.1.3.140:dev"
+    compile "codechicken:CodeChickenCore:1.7.10-1.0.7.47:dev"
+    compile "codechicken:NotEnoughItems:1.7.10-1.0.5.120:dev"
     compile "codechicken:ForgeMultipart:1.7.10-1.2.0.345:dev"
-    compile "mantle:Mantle:1.7.10-0.3.2.jenkins190:deobf"
-    compile "tconstruct:TConstruct:1.7.10-1.8.7.build981:deobf"
-    compile "applecore:AppleCore:1.7.10-1.2.1+101.b8584:deobf"
+    compile "mantle:Mantle:1.7.10-0.3.2b:deobf"
+    compile "tconstruct:TConstruct:1.7.10-1.8.8.build991:deobf"
+    compile "applecore:AppleCore:1.7.10-1.3.0:deobf"
 }
 
 processResources
